exploring-reference-grants/cross-ns-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cross-ns
  namespace: tenant-a
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.tenant-d.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          namespace: tenant-d
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
